k8s/namespaces/oauth2-proxy/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: oauth2-proxy
spec:
  type: NodePort
  ports:
  - port: 4180
    targetPort: 2801
  selector:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: oauth2-proxy
