k8s/namespaces/oauth2-proxy/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: oauth2-proxy

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: oauth2-proxy
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: oauth2-proxy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
